--- a/repos.html
+++ b/repos.html
@@ -77,8 +77,8 @@
                 <h2>Repos</h2>
                 <div class="repos-content">
                   <div class="repos-content-job-title" style="color: darkcyan;">
-                    <img src="https://raw.githubusercontent.com/melharfi/MELHARFI-2D-Game-Engine/master/assets/logo.png"><br>
-                    MELHARFI-2D-Game-Engine.
+                    <p><img src="https://raw.githubusercontent.com/melharfi/MELHARFI-2D-Game-Engine/master/assets/logo.png"></p>
+                    <p><b><h3>MELHARFI-2D-Game-Engine</h3></b></p>
                   </div>
                   <div class="repos-content-sub">
                     <a href="https://github.com/melharfi/MELHARFI-2D-Game-Engine" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
@@ -89,8 +89,25 @@
                     <p>It's commonly useful for beginners and for advanced people, as I’ll show you my own game that I build with it (at the end of that topic).</p>
                     <p>The library is built in C# language so you can use it in any .NET language such as VB.NET while it supports Framework 4.0 or higher and Visual Studio 2015 or higher (some lambda expression not handled by VS 2013 or older).</p>
                     <p>It's the first and unique library for graphics using GDI+ as far as I know.</p>
+                    <button type="button" class="btn btn-primary" onclick="window.location = 'repos/melharfi-2d-game-engine/description.html'">See Wiki>></button>
+                  </div>
+
+                  <div class="repos-content-job-title" style="color: darkcyan;">
+                    <p><img src="https://raw.githubusercontent.com/melharfi/ECLP/master/resources/logo.png"></p>
+                    <p><b><h3>ECLP {Easy Command Line Parser}</h3></b></p>
+                  </div>
+                  <div class="repos-content-sub">
+                    <a href="https://github.com/melharfi/ECLP" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a>
+                  </div>
+                  <div class="repos-content-sub">
+                    <p>This CLP use 2 ways to parse a command, either from a command line string or from an array as the one passed as argument to the main function.</p>
+                    <p>ECLP defin 5 types of arguments as Verbs that you can uses.</p>
+                    <p>It's commonly useful for beginners and for advanced people, as I’ll show you my own game that I build with it (at the end of that topic).</p>
+                    <p>The library is built in C# language so you can use it in any .NET language such as VB.NET while it supports Framework 4.0 or higher and Visual Studio 2015 or higher (some lambda expression not handled by VS 2013 or older).</p>
+                    <p>It's the first and unique library for graphics using GDI+ as far as I know.</p>
                     <button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-description.html'">See Wiki>></button>
                   </div>
+
                 </div>
               </div>
             </div>
