--- a/repos/MELHARFI-2D-Game-Engine/01-initializing.html
+++ b/repos/MELHARFI-2D-Game-Engine/01-initializing.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Author Web Page</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../../style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -9,22 +9,22 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-        <link rel="stylesheet" href="highlight/styles/dracula.css">
-        <script src="highlight/highlight.pack.js"></script>
+        <link rel="stylesheet" href="../../highlight/styles/dracula.css">
+        <script src="../../highlight/highlight.pack.js"></script>
         <script>hljs.initHighlightingOnLoad();</script>
     </head>
     <body>
         <!----NavigationBar---->
         <section id="nav-bar">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"><img src="img/logo.jpg"></a>
+                <a class="navbar-brand" href="#"><img src="../../img/logo.jpg"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="index.html">HOME</a>
-                    <a class="nav-item nav-link" href="repos.html">REPOS</a>
+                    <a class="nav-item nav-link" href="../../index.html">HOME</a>
+                    <a class="nav-item nav-link" href="../../repos.html">REPOS</a>
                   </div>
                 </div>
               </nav>
@@ -39,25 +39,25 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="img/1.jpg" class="d-block img-fluid w-100">
+                    <img src="../../img/1.jpg" class="d-block img-fluid w-100">
                     <div class="carousel-caption">
                       <h5>Welcome to The-Morpher Github Page</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="img/2.jpg" class="d-block img-fluid w-100">
+                    <img src="../../img/2.jpg" class="d-block img-fluid w-100">
                     <div class="carousel-caption">
                       <h5>Love programming and discover new technologies</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="img/3.jpg" class="d-block img-fluid w-100">
+                    <img src="../../img/3.jpg" class="d-block img-fluid w-100">
                     <div class="carousel-caption">
                       <h5>All my repos is shared</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="img/4.jpg" class="d-block img-fluid w-100">
+                    <img src="../../img/4.jpg" class="d-block img-fluid w-100">
                     <div class="carousel-caption">
                       <h5>Feel free to give me a hint if anything need a tweak</h5>
                     </div>
@@ -95,28 +95,28 @@
                     <p><b><li>Pre Requirement</li></b></p>
                     <p>Preference Visual studio 2017 or above, i am using 2019  frensh version for this tutorial.</p>
                     <p>
-                      <p><img id="myImg1" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/createProjecrImg1.PNG" alt="" width="800" height="555" onclick="ShowModalImage('myImg1')"></p>
+                      <p><img id="myImg1" class="myImg" src="assets/createProjecrImg1.PNG" alt="" width="800" height="555" onclick="ShowModalImage('myImg1')"></p>
                     </p>
                     <p>Application Windows Form (.Net Framework).</p>
                     <p>
-                      <p><img id="myImg2" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/createProjecrImg2.PNG" alt="" width="800" height="555" onclick="ShowModalImage('myImg2')"></p>
+                      <p><img id="myImg2" class="myImg" src="assets/createProjecrImg2.PNG" alt="" width="800" height="555" onclick="ShowModalImage('myImg2')"></p>
                     </p>
                     <p>Name it 2dProject or anything you want</p>
                     <p>
-                      <p><img id="myImg3" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/createProjecrImg3.PNG" alt="" width="800" height="555" onclick="ShowModalImage('myImg3')"></p>
+                      <p><img id="myImg3" class="myImg" src="assets/createProjecrImg3.PNG" alt="" width="800" height="555" onclick="ShowModalImage('myImg3')"></p>
                     </p>
                     <p>>Now we need to fix a size for our form, choose what you fit
-                      <p><img id="myImg4" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/createProjecrImg4.PNG" alt="" width="800" height="437" onclick="ShowModalImage('myImg4')"></p>
+                      <p><img id="myImg4" class="myImg" src="assets/createProjecrImg4.PNG" alt="" width="800" height="437" onclick="ShowModalImage('myImg4')"></p>
                     </p>
 
                     <p><b><li>Integration of MELHARFI.dll</li></b></p>
                     <p>You have 2 choices either downloading release under <a href="https://github.com/melharfi/MELHARFI-2D-Game-Engine/releases">release</a> and add MELHARFI.dll manually to references.</p>
                     <p>Or the easiest way using nuget</p>
-                      <p><img id="myImg5" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/createProjecrImg5.PNG" alt="" width="780" height="439" onclick="ShowModalImage('myImg5')"></p>
-                      <p><img id="myImg6" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/createProjecrImg6.PNG" alt="" width="800" height="398" onclick="ShowModalImage('myImg6')"></p>
+                      <p><img id="myImg5" class="myImg" src="assets/createProjecrImg5.PNG" alt="" width="780" height="439" onclick="ShowModalImage('myImg5')"></p>
+                      <p><img id="myImg6" class="myImg" src="assets/createProjecrImg6.PNG" alt="" width="800" height="398" onclick="ShowModalImage('myImg6')"></p>
                     </p>
                     <p>Make sure the project is well loaded and no error is found (1) and is referenced (2)<br>
-                      <p><img id="myImg7" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/createProjecrImg7.PNG" alt="" width="800" height="437" onclick="ShowModalImage('myImg7')"></p>
+                      <p><img id="myImg7" class="myImg" src="assets/createProjecrImg7.PNG" alt="" width="800" height="437" onclick="ShowModalImage('myImg7')"></p>
                     </p>
                   
                     <p><b><li>Surface to draw in</li></b></p>
@@ -151,7 +151,7 @@ using MELHARFI;
 using MELHARFI.Manager;
                       </code>
                     </pre>
-                    <p><img id="myImg8" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/createProjecrImg8.PNG" alt="" width="462" height="340" onclick="ShowModalImage('myImg8')"></p>
+                    <p><img id="myImg8" class="myImg" src="assets/createProjecrImg8.PNG" alt="" width="462" height="340" onclick="ShowModalImage('myImg8')"></p>
                     </p>
                     <p>Assuming your game is basic and need only one instance of your game engine add this line in the Form1 class constuctor:</p>
                     <p>
@@ -160,7 +160,7 @@ using MELHARFI.Manager;
 Manager manager = new Manager(this, "name_of_Instance_like_CORE_ENGINE");
                         </code>
                       </pre>
-                      <p><img id="myImg9" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/createProjecrImg9.PNG" alt="" width="595" height="326" onclick="ShowModalImage('myImg9')"></p>
+                      <p><img id="myImg9" class="myImg" src="assets/createProjecrImg9.PNG" alt="" width="595" height="326" onclick="ShowModalImage('myImg9')"></p>
                     </p>
                     <p>The name given to the constructor give a meaning of the current instance, we'll cover its uility later.</p>
                     <p>By default the background color is black, so if you compile your project you'll see a black window.</p>
@@ -172,9 +172,9 @@ manager.Background = Color.Blue;
                         </code>
                       </pre>
                     </p>
-                    <p><img id="myImg10" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/createProjecrImg10.PNG" alt="" width="616" height="378" onclick="ShowModalImage('myImg10')"></p>
+                    <p><img id="myImg10" class="myImg" src="assets/createProjecrImg10.PNG" alt="" width="616" height="378" onclick="ShowModalImage('myImg10')"></p>
                     <p>And just run your code to see a beautiful window</p>
-                    <p><img id="myImg11" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/createProjecrImg11.PNG" alt="" onclick="ShowModalImage('myImg11')"></p>
+                    <p><img id="myImg11" class="myImg" src="assets/createProjecrImg11.PNG" alt="" onclick="ShowModalImage('myImg11')"></p>
                     <p>If you experience some kind of Flickering of screen, it's an issue in GDI+ that you can resolve by adding that peace of code in top of your main form code just after InitializeComponent();</p>
                     <p>
                       <pre>
@@ -184,7 +184,7 @@ this.Invalidate();
                         </code>
                       </pre>
                     </p>
-                    <p><img id="myImg12" class="myImg" src="repos/MELHARFI-2D-Game-Engine/assets/createProjecrImg12.PNG" alt="" onclick="ShowModalImage('myImg12')"></p>
+                    <p><img id="myImg12" class="myImg" src="assets/createProjecrImg12.PNG" alt="" onclick="ShowModalImage('myImg12')"></p>
                     </p>
 
                     <p><b><li>FPS or Refresh Rate</li></b></p>
@@ -210,38 +210,38 @@ manager.refreshTimer.Interval = Fps;
                     </p>
                     <p>Please notice that the Manager is specialy used for dealing with graphic stuff.</p>
                     <p>You can find many thing around rendering and so and you can discover this using intellisense</p>
-                    <button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-02-superposition.html'">Next Chapter 02. Superposition and ZIndex>></button>
+                    <button type="button" class="btn btn-primary" onclick="window.location = '02-superposition.html'">Next Chapter 02. Superposition and ZIndex>></button>
                   </div>
                 </div>
               </div>
               <!----Summary---->
               <div class="col-md-2 skills-bar">
                 <p style="color: cadetblue; font-size: 20px;">Summary</p>
-                <p><a href="melharfi-2d-game-engine-wiki-description.html">Description</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-description.html">Description</a></p>
+                <p><a href="description.html">Description</a></p>
+                <p><a href="description.html">Description</a></p>
                 <p><b>>>01. Initializing MELHARFI engine</b></p>
-                <p><a href="melharfi-2d-game-engine-wiki-02-superposition.html">02. Superposition and ZIndex</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-03-drawing-classes.html">03. Drawing classes</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-04-bmp.html">04. Bmp (Bitmap)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-05-rec.html">05. Rec (Rectangle)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-06-anim.html">06. Anim (Animation)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-07-txt.html">07. Txt (Text)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-08-fillpolygon.html">08. FillPolygon (shapes)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-09-error.html">09. Error handling</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-10-mouse-events.html">10. Mouse events</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-11-controls.html">11. Controls and ControlLayer</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-12-remove-clear-fixedObjectLayer.html">12. Remove, Clear and FixedObjectLayer</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-13-cryptography.html">13. Cryptography</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-14-show-hide.html">14. Show, Hide</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-15-igfx.html">15. Interface IGfx</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-16-tag.html">16. Tag</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-17-child.html">17. Child</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-18-sprite-sheet.html">18. Sprite Sheet</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-19-converting-color.html">19. Converting color</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-20-astar.html">20. AStar pathfinding</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-21-lidgren.html">21. LidgrenNetwork</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-22-drawing-surface.html">22. Drawing Surface</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-23-flickering.html">23. Flickering issue</a></p>
+                <p><a href="02-superposition.html">02. Superposition and ZIndex</a></p>
+                <p><a href="03-drawing-classes.html">03. Drawing classes</a></p>
+                <p><a href="04-bmp.html">04. Bmp (Bitmap)</a></p>
+                <p><a href="05-rec.html">05. Rec (Rectangle)</a></p>
+                <p><a href="06-anim.html">06. Anim (Animation)</a></p>
+                <p><a href="07-txt.html">07. Txt (Text)</a></p>
+                <p><a href="08-fillpolygon.html">08. FillPolygon (shapes)</a></p>
+                <p><a href="09-error.html">09. Error handling</a></p>
+                <p><a href="10-mouse-events.html">10. Mouse events</a></p>
+                <p><a href="11-controls.html">11. Controls and ControlLayer</a></p>
+                <p><a href="12-remove-clear-fixedObjectLayer.html">12. Remove, Clear and FixedObjectLayer</a></p>
+                <p><a href="13-cryptography.html">13. Cryptography</a></p>
+                <p><a href="14-show-hide.html">14. Show, Hide</a></p>
+                <p><a href="15-igfx.html">15. Interface IGfx</a></p>
+                <p><a href="16-tag.html">16. Tag</a></p>
+                <p><a href="17-child.html">17. Child</a></p>
+                <p><a href="18-sprite-sheet.html">18. Sprite Sheet</a></p>
+                <p><a href="19-converting-color.html">19. Converting color</a></p>
+                <p><a href="20-astar.html">20. AStar pathfinding</a></p>
+                <p><a href="21-lidgren.html">21. LidgrenNetwork</a></p>
+                <p><a href="22-drawing-surface.html">22. Drawing Surface</a></p>
+                <p><a href="23-flickering.html">23. Flickering issue</a></p>
               </div>
               <!----End Summary---->
             </div>
