--- a/repos/MELHARFI-2D-Game-Engine/18-sprite-sheet.html
+++ b/repos/MELHARFI-2D-Game-Engine/18-sprite-sheet.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Author Web Page</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../../style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -9,22 +9,22 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-        <link rel="stylesheet" href="highlight/styles/dracula.css">
-        <script src="highlight/highlight.pack.js"></script>
+        <link rel="stylesheet" href="../../highlight/styles/dracula.css">
+        <script src="../../highlight/highlight.pack.js"></script>
         <script>hljs.initHighlightingOnLoad();</script>
     </head>
     <body>
         <!----NavigationBar---->
         <section id="nav-bar">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"><img src="img/logo.jpg"></a>
+                <a class="navbar-brand" href="#"><img src="../../img/logo.jpg"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="index.html">HOME</a>
-                    <a class="nav-item nav-link" href="repos.html">REPOS</a>
+                    <a class="nav-item nav-link" href="../../index.html">HOME</a>
+                    <a class="nav-item nav-link" href="../../repos.html">REPOS</a>
                   </div>
                 </div>
               </nav>
@@ -39,25 +39,25 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="img/1.jpg" class="d-block img-fluid w-100">
+                    <img src="../../img/1.jpg" class="d-block img-fluid w-100">
                     <div class="carousel-caption">
                       <h5>Welcome to The-Morpher Github Page</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="img/2.jpg" class="d-block img-fluid w-100">
+                    <img src="../../img/2.jpg" class="d-block img-fluid w-100">
                     <div class="carousel-caption">
                       <h5>Love programming and discover new technologies</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="img/3.jpg" class="d-block img-fluid w-100">
+                    <img src="../../img/3.jpg" class="d-block img-fluid w-100">
                     <div class="carousel-caption">
                       <h5>All my repos is shared</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="img/4.jpg" class="d-block img-fluid w-100">
+                    <img src="../../img/4.jpg" class="d-block img-fluid w-100">
                     <div class="carousel-caption">
                       <h5>Feel free to give me a hint if anything need a tweak</h5>
                     </div>
@@ -88,7 +88,7 @@
                     <p><a href="https://github.com/melharfi/MELHARFI-2D-Game-Engine" target="blank"><i class="fa fa-github" aria-hidden="true"></i>Got to repo.</a></p>
                     <p><b><h3>18. SpriteSheet</h3></b></p>
                     <p>Sprite Sheet is a picture that contain many peace of small graphics inside all drawn in the same file.</p>
-                    <p><img src="repos/MELHARFI-2D-Game-Engine/assets/naruto.png">&nbsp;&nbsp;&nbsp;<img src="https://raw.githubusercontent.com/melharfi/MELHARFI-2D-Game-Engine/master/assets/choji.png"></p>
+                    <p><img src="assets/naruto.png">&nbsp;&nbsp;&nbsp;<img src="https://raw.githubusercontent.com/melharfi/MELHARFI-2D-Game-Engine/master/assets/choji.png"></p>
                     <p><img src="https://i.imgur.com/p3wyMEM.png"></p>
                     <p>The purpose for that is when you want to show a person walking, the old way is to store each frame as a single picture, and switch them one by one as we have seen in th chapter 06-Anim.
                     <p>The inconvenient is that you must create many files, they'll took more spaces.</p>
@@ -99,7 +99,7 @@
                     <p>This tool is called "Dark Function" it's a Java application therefore you need to have a Java runtime on your computer, <a href="http://darkfunction.com/editor/">Link</a>.</p>
                     <p>It has the ability to auto detect a form and then you dont need select a rectangle yourself.</p>
                     <p>When you open your SpriteSheet, just double click inside the picture you want, and Dark Function well surround it with a delimited square, regrouping all pixels he found and stop when he no lounger find anything around.</p>
-                    <p><img src="repos/MELHARFI-2D-Game-Engine/assets/darkFunction.PNG"></p>
+                    <p><img src="assets/darkFunction.PNG"></p>
                     <p>
                       <pre>
                         <code class="csharp">
@@ -242,37 +242,37 @@ namespace _2dProject
                         </code>
                       </pre>
                     </p>
-                    <p><button type="button" class="btn btn-primary" onclick="window.location = 'melharfi-2d-game-engine-wiki-19-converting-color.html'">Next Chapter 18. Sprite Sheet>></button></p>
+                    <p><button type="button" class="btn btn-primary" onclick="window.location = '19-converting-color.html'">Next Chapter 18. Sprite Sheet>></button></p>
                   </div>
                 </div>
               </div>
               <!----Summary---->
               <div class="col-md-2 skills-bar">
                 <p style="color: cadetblue; font-size: 20px;">Summary</p>
-                <p><a href="melharfi-2d-game-engine-wiki-description.html">Description</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-01-initializing.html">01. Initializing MELHARFI engine</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-02-superposition.html">02. Superposition and ZIndex</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-03-drawing-classes.html">03. Drawing classes</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-04-bmp.html">04. Bmp (Bitmap)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-05-rec.html">05. Rec (Rectangle)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-06-anim.html">06. Anim (Animation)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-07-txt.html">07. Txt (Text)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-08-fillpolygon.html">08. FillPolygon (shapes)</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-09-error.html">09. Error handling</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-10-mouse-events.html">10. Mouse events</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-11-controls.html">11. Controls and ControlLayer</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-12-remove-clear-fixedObjectLayer.html">12. Remove,Clear and FixedObjectLayer</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-13-cryptography.html">13. Cryptography</a>></p>
-                <p><a href="melharfi-2d-game-engine-wiki-14-show-hide.html">14. Show, Hide</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-15-igfx.html">15. Interface IGfx</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-16-tag.html">16. Tag</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-17-childs.html">17. Childs</a></p>
+                <p><a href="description.html">Description</a></p>
+                <p><a href="01-initializing.html">01. Initializing MELHARFI engine</a></p>
+                <p><a href="02-superposition.html">02. Superposition and ZIndex</a></p>
+                <p><a href="03-drawing-classes.html">03. Drawing classes</a></p>
+                <p><a href="04-bmp.html">04. Bmp (Bitmap)</a></p>
+                <p><a href="05-rec.html">05. Rec (Rectangle)</a></p>
+                <p><a href="06-anim.html">06. Anim (Animation)</a></p>
+                <p><a href="07-txt.html">07. Txt (Text)</a></p>
+                <p><a href="08-fillpolygon.html">08. FillPolygon (shapes)</a></p>
+                <p><a href="09-error.html">09. Error handling</a></p>
+                <p><a href="10-mouse-events.html">10. Mouse events</a></p>
+                <p><a href="11-controls.html">11. Controls and ControlLayer</a></p>
+                <p><a href="12-remove-clear-fixedObjectLayer.html">12. Remove,Clear and FixedObjectLayer</a></p>
+                <p><a href="13-cryptography.html">13. Cryptography</a>></p>
+                <p><a href="14-show-hide.html">14. Show, Hide</a></p>
+                <p><a href="15-igfx.html">15. Interface IGfx</a></p>
+                <p><a href="16-tag.html">16. Tag</a></p>
+                <p><a href="17-childs.html">17. Childs</a></p>
                 <p><b>>>18. Sprite Sheet</b></p>
-                <p><a href="melharfi-2d-game-engine-wiki-19-converting-color.html">19. Converting color</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-20-astar.html">20. AStar pathfinding</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-21-lidgren.html">21. LidgrenNetwork</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-22-drawing-surface.html">22. Drawing Surface</a></p>
-                <p><a href="melharfi-2d-game-engine-wiki-23-flickering.html">23. Flickering issue</a></p>
+                <p><a href="19-converting-color.html">19. Converting color</a></p>
+                <p><a href="20-astar.html">20. AStar pathfinding</a></p>
+                <p><a href="21-lidgren.html">21. LidgrenNetwork</a></p>
+                <p><a href="22-drawing-surface.html">22. Drawing Surface</a></p>
+                <p><a href="23-flickering.html">23. Flickering issue</a></p>
               </div>
               <!----End Summary---->
             </div>
